--- a/mafo.css
+++ b/mafo.css
@@ -56,4 +56,15 @@
     display: block;
     text-align: left;
   }
-}
+  
+  }
+  .topnav.responsive .dropdown {float: none;}
+  .topnav.responsive .dropdown-content {position: relative;}
+  .topnav.responsive .dropdown .dropbtn {
+    display: block;
+    width: 100%;
+    text-align: left;
+  }
+
+
+
